# hit_course_design

./: .gitginore  .gitignore  CMakeLists.txt  README.md  Utils.c  Utils.h  build.bat  build.sh  global_settings.h  task.h  task.html  task_1.c  task_1_gpu.cu  task_2.c  task_3.c  task_avx.c
.cache/clangd/index/: CheckMatrix.c.CA9FA39544FCF874.idx  CheckMatrix.h.5EAAA714DCEF017E.idx  Utils.c.D575E23FC2703893.idx  Utils.h.EDF9AD036108D065.idx  global_settings.h.7A40328F04860499.idx  task_1.c.0493583C972AEDB1.idx  task_2.c.EF7EBAD8C55F618C.idx  task_3.c.A4AF83CCED0598B6.idx  task_avx.c.E766D7C455B789B1.idx  test.cc.2E227570ED41A126.idx  testTools.cc.A160745C82843D88.idx  testTools.h.67174BC46B0BAD16.idx
output/: task1.md  task1.txt  task1_gpu.txt  task2.md  task3.md
public/: CheckMatrix.c  CheckMatrix.h  Utils.c  Utils.h  global_settings.h  task.h
result/: task1.md
script/: build.sh  task1_test.sh  task1_test_gpu.sh  task2_test.sh  task3_test.sh
test/: CMakeLists.txt  TODO.md  test.cc  testTools.cc  testTools.h
